I don't know how to balance quotes...

--- a/build.xml
+++ b/build.xml
@@ -12,6 +12,7 @@
     <target name="main" >
         <echo> --- Starting --- </echo>
         <echo message="${TODAY}" />
+		<echo message=" tryin' to brake things up...>
     </target>
     
 </project>
