--- a/build.xml
+++ b/build.xml
@@ -12,7 +12,7 @@
     <target name="main" >
         <echo> --- Starting --- </echo>
         <echo message="${TODAY}" />
-		<echo message=" tryin' to brake things up...>
+		<echo message=" tryin' to brake things up..."/>
     </target>
     
 </project>
